Chore: fix updateFlags, mutable list